tests/baselines/reference/annotationDeclarationFieldTypeError12.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError12.ets(2,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'undefined'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError12.ets (1 errors) ====
    @interface Anno {
        a: undefined
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'undefined'.
    }